# screensnip

./: CMakeLists.txt
src/: CMakeLists.txt  hotkeymanager.cpp  hotkeymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  snipwidget.cpp  snipwidget.h  uimainwindow.cpp  uimainwindow.h  uisettingswindow.cpp  uisettingswindow.h  utility.cpp  utility.h
